--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <p>Déchiffrer cela : <span id="morse-text" class="morse">-.-. .- -. .- .--. é / -.. ..- / .--. .-. . -- .. . .-. / é - .- --. . </span></p>
         
         <h2> Rendez-vous à cet endroit </h2> 
-
+        <p><strong>VOICI LA SUITE DE LA DEVINETTE :</strong></p>
+        <p><strong>" Dans les montagnes " </strong></p>
     </div>
     <button onclick="copyMorse()">Copier le Code</button>
 </body>
